--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
+
+
 .App {
   text-align: center;
+  background-image: linear-gradient(to bottom, blue, #0f4d92   );
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 105vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,7 +16,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +25,85 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.temperature-div {
+    position: relative;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 250px;
+    height: 210px;
+    color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type='text'] {
+  margin-top: 10px;
+  width: 300px!important;
 }
+
+.temperature-div #temperature {
+    font-size: 90px;
+    font-weight: bold;    
+    font-style: normal;
+}
+
+.temp-icon , .conditiionIcon{
+    display: flex;
+    flex-direction: row;
+    margin: -45px -20px -20px 192px ;
+    width: 50px;
+    height: 20px;
+}
+
+.temp-icon #temp-letter{
+    font-size: 30px;
+}
+
+.feel_message {
+   font-size: 20px;
+   display: flex;
+   flex-direction: column;
+   color: yellow;
+   justify-content: center;
+   text-align: center;
+}
+
+footer {
+   margin: 0 auto;
+   width: 250px;
+}
+
+footer .extra-details{
+  margin-top: 90px;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+}
+
+footer .item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+#seachWeather {
+   padding: 10px;
+   width: 200px;
+   border: 1px #fff solid;
+   border-radius: 20px;
+}
+
+.location_weather {
+   color: #fff;
+   margin-top: 20px;
+   display: flex;
+   flex-direction: row;
+   text-align: center;
+   justify-content: center;
+   align-items: center;
+}
+
